--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </p>
     </footer>
 
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
