--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <form id="decision-form" class="stack" novalidate>
                         <label for="questions-input" class="field-label">Вопросы</label>
                         <textarea id="questions-input" class="field" rows="8"
-                            placeholder="Какие вопросы требуют благословения Одина, сингулярности черной дыры и садовой эльфийки? Разделяйте их новой строкой."></textarea>
+                            placeholder="Какие вопросы требуют благословения Одина, Сингулярности Черной Дыры и Садовой Эльфийки? Разделяйте их новой строкой."></textarea>
 
                         <label for="people-input" class="field-label">Участники</label>
                         <input id="people-input" class="field" type="text" placeholder="Илья, Леша, …" />
@@ -40,7 +40,7 @@
                 <section id="screen-answer" class="card hidden" aria-live="polite">
                     <h2 class="section-title">Отвечай!</h2>
                     <div class="blessing-image" aria-hidden="true"></div>
-                    <p class="hint">Один, сингулярность черной дыры и садовая эльфийка наделяют энергией того, кто
+                    <p class="hint">Один, Сингулярность Черной Дыры и Садовая Эльфийка наделяют энергией того, кто
                         смотрит на
                         картинку.</p>
                     <div class="actions">
