--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Демо: статическое веб‑приложение на GitHub Pages</title>
+    <title>Пашодин</title>
     <meta name="description" content="Мини-приложение без сервера: динамические цитаты через публичный API.">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,7 +23,7 @@
                     <form id="decision-form" class="stack" novalidate>
                         <label for="questions-input" class="field-label">Вопросы</label>
                         <textarea id="questions-input" class="field" rows="8"
-                            placeholder="Какие вопросы требуют благословения Одина, Сингулярности Черной Дыры и Садовой Эльфийки? Разделяйте их новой строкой."></textarea>
+                            placeholder="Какие вопросы требуют решения?&#10;&#10;Что нужно сделать? (императив)&#10;&#10;Разделяйте их новой строкой. Пример:&#10;&#10;— Что делать, есть ли у нас консенсус?&#10;— Сделай, чтобы было свободно и интересно."></textarea>
 
                         <label for="people-input" class="field-label">Участники</label>
                         <input id="people-input" class="field" type="text" placeholder="Илья, Леша, …" />
